# BtB-MCR

./: CMakeLists.txt  README.md  input.txt  main.cpp
lib/: calcFunctions.hpp  dataStructures.hpp  userOpts.hpp  utils.hpp
lib/YTA/: YTA.cpp  YTA.hpp
other/: README.md  input.txt
src/: main.cpp
tests/: printSandC.cpp  testInit.cpp
